<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ListaGraficosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:clipToPadding="false"
        android:gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center">

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data Inicial"/>
                <EditText
                    android:id="@+id/data_inicial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data Limite"
                    />
                <EditText
                    android:id="@+id/data_limite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:id="@+id/lista_graficos_status_maquina">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circle_shape_deeppurple"
                        android:src="@drawable/ic_show_chart_black_24dp"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/nome_grafico_linha_status_maquina"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/descricao_grafico_linha_status_maquina"
                        android:padding="5dp"
                        android:textColor="@android:color/darker_gray"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/lista_graficos_torta"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circle_shape_yellow"
                        android:src="@drawable/ic_pie_chart_black_24dp"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/nome_grafico_torta_status_maquina"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/descricao_grafico_torta_status_maquina"
                        android:padding="5dp"
                        android:textColor="@android:color/darker_gray"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:clipToPadding="false"-->
            <!--android:gravity="center"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<android.support.v7.widget.CardView-->
                <!--android:id="@+id/home_card_maps"-->
                <!--android:foreground="?android:attr/selectableItemBackground"-->
                <!--android:clickable="true"-->
                <!--android:layout_width="160dp"-->
                <!--android:layout_height="190dp"-->
                <!--android:layout_margin="10dp">-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:orientation="vertical"-->
                    <!--android:gravity="center">-->
                    <!--<ImageView-->
                        <!--android:layout_width="64dp"-->
                        <!--android:layout_height="64dp"-->
                        <!--android:background="@drawable/circle_shape_green"-->
                        <!--android:src="@drawable/ic_place_black_24dp"-->
                        <!--android:padding="10dp"/>-->
                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textStyle="bold"-->
                        <!--android:layout_marginTop="10dp"-->
                        <!--android:text="@string/home_maps_nome"/>-->
                    <!--<View-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="1dp"-->
                        <!--android:background="@color/lightgray"-->
                        <!--android:layout_margin="10dp"/>-->
                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:gravity="center"-->
                        <!--android:text="@string/home_maps_desc"-->
                        <!--android:padding="5dp"-->
                        <!--android:textColor="@android:color/darker_gray"/>-->

                <!--</LinearLayout>-->

            <!--</android.support.v7.widget.CardView>-->

            <!--<android.support.v7.widget.CardView-->
                <!--android:id="@+id/home_card_logoff"-->
                <!--android:foreground="?android:attr/selectableItemBackground"-->
                <!--android:clickable="true"-->
                <!--android:layout_width="160dp"-->
                <!--android:layout_height="190dp"-->
                <!--android:layout_margin="10dp">-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:gravity="center"-->
                    <!--android:orientation="vertical">-->

                    <!--<ImageView-->
                        <!--android:layout_width="64dp"-->
                        <!--android:layout_height="64dp"-->
                        <!--android:background="@drawable/circle_shape_pink"-->
                        <!--android:padding="10dp"-->
                        <!--android:src="@drawable/ic_exit_to_app_black_24dp" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="10dp"-->
                        <!--android:text="@string/home_sair_nome"-->
                        <!--android:textStyle="bold" />-->

                    <!--<View-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="1dp"-->
                        <!--android:layout_margin="10dp"-->
                        <!--android:background="@color/lightgray" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:gravity="center"-->
                        <!--android:padding="5dp"-->
                        <!--android:text="@string/home_sair_descricao"-->
                        <!--android:textColor="@android:color/darker_gray" />-->

                <!--</LinearLayout>-->

            <!--</android.support.v7.widget.CardView>-->

        <!--</LinearLayout>-->

    </LinearLayout>

</ScrollView>